Mark MetadataValidator with @NullMarked and update the calls to List.get(0) with List.getFirst()